Basic UI test with TestFX